Fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
 }
 
+
 html {
     height: 100%;
     font-size: 30px;
@@ -16,23 +17,19 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
-    
-     
+    margin: 0;    
 }
 
 .calculator {
     display: flex;
     flex-wrap: wrap;
-    width: 12rem;
-    
-    
+    width: 12rem;    
     
     border: 1px solid rgb(175,175,175);
-    box-sizing: content-box;
-    //background: rgba(243, 233, 233, 0.774);
+    box-sizing: content-box;    
     background: rgba(28, 28, 56, 0.8);
-    box-shadow: 2px 5px 12px rgba(0, 0, 0, 0.9)
+    box-shadow: 2px 5px 12px rgba(0, 0, 0, 0.9);
+    overflow: hidden;
 
 }
 
@@ -46,8 +43,8 @@ body {
     height: 1.6rem;
     border: 1px solid rgb(175,175,175);
     text-align: right;
-    overflow-y: scroll;
-    padding: 0 .2 em;
+    overflow-y: auto;
+    padding: 0 .2rem;
 }
 .display-bottom {
     display: flex;
@@ -57,9 +54,9 @@ body {
     width: 12rem;
     height: 3em;
     border: 1px solid rgb(175,175,175);
-    padding: .2em 0;
+    padding: .2rem;
     text-align: right;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .button {
